--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@svgr/webpack": "^8.0.1",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
+		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^29.5.14",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"@types/react-redux": "^7.1.34",
@@ -37,6 +38,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"fetch-mock": "^12.5.2",
 		"html-webpack-plugin": "^5.5.1",
 		"husky": "^8.0.3",
 		"identity-obj-proxy": "^3.0.0",
@@ -48,6 +50,8 @@
 		"postcss-loader": "^7.3.3",
 		"prettier": "^2.8.8",
 		"react-refresh": "^0.14.0",
+		"react-test-renderer": "^19.1.0",
+		"redux-mock-store": "^1.5.5",
 		"sass": "^1.69.7",
 		"sass-loader": "^13.3.3",
 		"style-loader": "^3.3.3",
@@ -82,10 +86,10 @@
 		"@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
 		"clsx": "^2.1.0",
 		"core-js": "^3.38.1",
-		"react": "^18.2.0",
+		"react": "^19.1.0",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
-		"react-dom": "^18.2.0",
+		"react-dom": "^19.1.0",
 		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.5.0",
 		"redux": "^5.0.1",
